--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,8 @@
     crossorigin="" />
   <link rel="icon" href="%PUBLIC_URL%/logo.ico" />
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+  <script async src="https://tag.clearbitscripts.com/v1/pk_d7691d9b2e1ad125bce6e2e001470785/tags.js"
+    referrerpolicy="strict-origin-when-cross-origin"></script>
   <title>Sudip's Porfolio</title>
 </head>
 
